--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     </head>
     <body>
 
-        <div id="root"></div>
+        <div id="root">
+            
+        </div>
+
+        <footer>
+            This website was created using html, css, javascript & Bootstrap Icons
+        </footer>
         
         <script src="index.js"></script>
     </body>
